<resources>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name">HelloW</string>
    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="register_prompt">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="register_title">ĐĂNG KÝ</string>
    <string name="hint_confirm_password">Nhập lại mật khẩu</string>
    <string name="btn_register">Đăng ký</string>
    <string name="login_prompt">Đã có tài khoản? Đăng nhập</string>
</resources>